Always set damage rect to output rect if 3D context was reshaped.

The first draw after a reshape needs to draw the entire contents of the
window, so ensure the overlay processor doesn't accidentally shrink the
damage rect.

BUG=721131
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2881483002
Cr-Commit-Position: refs/heads/master@{#471244}

Former-commit-id: 2f1f8dd5a7f7d15da2c24fc2ffa27ef48c7441a1